--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,18 @@
+APScheduler==3.7.0
 asgiref==3.4.1
 certifi==2021.5.30
+cycler==0.10.0
 Django==3.2.5
 django-crispy-forms==1.12.0
+django-crontab==0.7.1
+kiwisolver==1.3.1
+matplotlib==3.4.2
+numpy==1.21.0
+Pillow==8.3.1
+pyparsing==2.4.7
+python-dateutil==2.8.2
 pytz==2021.1
+six==1.16.0
 sqlparse==0.4.1
+tzlocal==2.1
 wincertstore==0.2
